added better openAPI spec
