# src/routes/items.router.ts
@@ -1,19 +1,24 @@
 import { Request, Response, Router } from 'express';
 import { HydratedDocument } from 'mongoose';
 import { authUser, authAdmin } from '../middleware/auth.mid';
-import itemModel from '../models/item.model';
-import { createItem, deleteItem, updateItem } from '../service/item.service';
+import {
+  createItem,
+  deleteItem,
+  getAllItems,
+  getItemById,
+  updateItem,
+} from '../services/item.service';
 import Item from '../types/item.type';
 import { logger } from '../utils/logger';
 
 const itemsRouter: Router = Router();
 
-// @route   GET api/items
+// @route   GET api/items/allitems
 // @desc    Get all items on menu.
 // @access  Public
-itemsRouter.get('/', async (req: Request, res: Response) => {
+itemsRouter.get('/allitems', async (req: Request, res: Response) => {
   try {
-    const items: Item[] | null = await itemModel.find();
+    const items: Item[] | null = await getAllItems();
     res.json(items);
   } catch (err) {
     logger.error(err);
@@ -21,13 +26,13 @@ itemsRouter.get('/', async (req: Request, res: Response) => {
   }
 });
 
-// @route   GET api/items/:id
+// @route   GET api/items/get/:id
 // @desc    Get item from menu.
 // @access  Public
-itemsRouter.get('/:id', async (req: Request, res: Response) => {
+itemsRouter.get('/get/:id', async (req: Request, res: Response) => {
   try {
     const { id } = req.params;
-    const item: Item | null = await itemModel.findById(id);
+    const item: Item | null = await getItemById(id);
     res.json(item);
   } catch (err) {
     logger.error(err);
@@ -35,11 +40,11 @@ itemsRouter.get('/:id', async (req: Request, res: Response) => {
   }
 });
 
-// @route   POST api/items
+// @route   POST api/items/add
 // @desc    Add new item.
 // @access  Admin
 itemsRouter.post(
-  '/',
+  '/add',
   authUser,
   authAdmin,
   async (req: Request, res: Response) => {
@@ -60,11 +65,11 @@ itemsRouter.post(
   }
 );
 
-// @route   PUT api/items/:id
+// @route   PUT api/items/update/:id
 // @desc    Update item.
 // @access  Admin
 itemsRouter.put(
-  '/:id',
+  '/update/:id',
   authUser,
   authAdmin,
   async (req: Request, res: Response) => {
@@ -83,7 +88,7 @@ itemsRouter.put(
   }
 );
 
-// @route   DELETE api/items/:id
+// @route   DELETE api/items/delete/:id
 // @desc    Delete item.
 // @access  Admin
 itemsRouter.delete(
